service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblio-app-service
spec:
  selector:
    app: biblio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
  type: NodePort
