ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-appli-ingress
spec:
  rules:
  - host: maapplication.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: biblio-app-service
            port:
              number: 80
